--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ python-multipart==0.0.9
 # Sessions & OAuth
 authlib==1.3.1
 httpx==0.24.1
+itsdangerous==2.1.2
+
 
 
 # MongoDB
@@ -23,6 +25,7 @@ python-dateutil==2.9.0.post0
 
 # Optional: rate limiting if you use the example fix
 slowapi==0.1.9
+
 
 
 
